--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_BASE_URL ="https://fportalapi20240313150400.azurewebsites.net/api"
+VITE_BASE_URL ="https://fportalapi-latest.onrender.com/api"
